--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -25,6 +25,7 @@
                 {% csrf_token %}
                 {{ profile_form | crispy }}
             <div><button class="btn">Update profile</button></div>
+            <a class="btn" href="{% url 'create_post' %}" role="button">Create Post</a>
     </div>
             </form>
 </div>
