--- a/templates/delete_post.html
+++ b/templates/delete_post.html
@@ -15,7 +15,8 @@
             {% csrf_token %}
             <strong class="delete-message">All data of this post will be permanently deleted!</strong>
             <br/>
-            <button class="btn">Delete Post</button>
+            <button class="btn btn-light">Delete Post</button>
+            <a href="/" aria-label="Cancel button" class="btn text-center btn-light">Cancel</a>
         </form>
         </div>
     </div>
