--- a/templates/404.html
+++ b/templates/404.html
@@ -8,8 +8,8 @@
         <div class="col-md-8 offset-md-2">
             <h1 class="text-center">Oops! This page doesn't exists.</h1>
             <p class="text-center">Sorry, you've encountered a 404 error. Please try again.</p>
-            <a href="{% url 'home' %}" class="btn justify-content-center">Home</a>
         </div>
+        <a href="{% url 'home' %}" class="btn btn-light">Home</a>
     </div>
 </div>
 
