--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -19,8 +19,8 @@
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
           {% endif %}
-          <div><button class="btn btn-dark justify-content-center" type="submit">{% trans "Log Out" %}</button></div>
-          <a href="/" aria-label="Cancel button" class="btn text-center">Cancel</a>
+          <div><button class="btn btn-light justify-content-center" type="submit">{% trans "Log Out" %}</button></div>
+          <a href="/" aria-label="Cancel button" class="btn btn-light text-center">Cancel</a>
           </form>
     </div>
   </div>
