--- a/templates/blog.html
+++ b/templates/blog.html
@@ -36,9 +36,9 @@
                                 <i class="far fa-solid fa-comments"></i> {{ post.number_of_comments }}
                             </p>
                             {% if user.is_authenticated %}
-                            <a href="{% url 'post_detail' post.slug %}" class="btn btn-dark">Read More</a>
+                            <a href="{% url 'post_detail' post.slug %}" class="btn btn-light">Read More</a>
                             {% else %}
-                            <a href="{% url 'account_signup' %}" class="btn btn-dark">Read More</a>
+                            <a href="{% url 'account_signup' %}" class="btn btn-light">Read More</a>
                             {% endif %}
                         </div>
                     </div>
