--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 
-<!-- CREATE POST FORM -->
+<!-- CREATE POST TEMPLATE -->
 <div class="container form-style">
     <div class="p-5 mb-5 post-card border border-dark border-2 rounded-3">
         <h1 class="card-title">Create Post</h1>
@@ -15,7 +15,7 @@
             <div class="form-group">
             {% csrf_token %}
             {{ form | crispy }}
-                <button class="btn">Create Post</button>
+                <button class="btn btn-light">Create Post</button>
             </div>
         </form>
     </div>
