--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -102,7 +102,7 @@
                 <form method="post" style="margin-top: 1.3em;">
                     {{ comment_form | crispy }}
                     {% csrf_token %}
-                    <button type="submit" class="btn">Add Comment</button>
+                    <button type="submit" class="btn btn-light">Add Comment</button>
                 </form>
                 {% endif %}
             </div>
