Start writing testing and passing through validations

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,7 +132,7 @@ img.footer-logo {
 
 .masthead-text {
     background-color: #e6b265;
-    color: b#141414;
+    color: #141414;
 }
 
 .post-title {
