--- a/templates/base.html
+++ b/templates/base.html
@@ -105,6 +105,7 @@
 
     <!-- TIMEOUT FOR ALERT MSG -->
     <script>
+      /* jshint esversion: 6 */
       setTimeout(function () {
           let messages = document.getElementById('msg');
           let alert = new bootstrap.Alert(messages);
