Fix errors in the html files

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -14,7 +14,7 @@
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top img-thumbnail"
-                                    src="https://res.cloudinary.com/dcydt01ed/image/upload/v1692737340/q0o43rqaawoccbgafryc.jpg">
+                                    src="https://res.cloudinary.com/dcydt01ed/image/upload/v1692737340/q0o43rqaawoccbgafryc.jpg" alt="Dogs">
                                 {% else %}
                                 <img class="card-img-top img-thumbnail" src=" {{ post.featured_image.url }}">
                                 {% endif %}
