--- a/templates/index.html
+++ b/templates/index.html
@@ -17,14 +17,14 @@
   </div>
 </section>
 
-  <div class="text-center">
+  <figure class="text-center">
     <blockquote class="blockquote">
       <p class="blockquote-text">"The world would be a nicer place if everyone had the ability to love as unconditionally as a dog."</p>
     </blockquote>
       <figcaption class="blockquote-footer">
         <cite title="Source Title">- M.K.Clinton</cite>
       </figcaption>
-  </div>
+    </figure>
 
   <!-- PAGE DIVIDER -->
   <div class="container">
@@ -68,7 +68,7 @@
             <div class="p-3">
               <h2 class="display-6">About Us</h2>
               <p>Hello, fellow puppy lovers!
-                  If you are the proud parent of adorable pooch and love sharing about your dog’s delightful moments, we are the perfect community for you!
+                  If you are the proud parent of adorable pooch and love sharing about your dogs delightful moments, we are the perfect community for you!
                   We are members of a pack of people who love dogs, know about dogs, and love sharing the dog life with each other. Life with dogs is rich, and the richness of life grows richer when it is shared.
               </p>
           </div>
@@ -91,7 +91,7 @@
             <img class="card-img-index card-image" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691979940/static/images/cute_dog.1da54a02f481.jpg" alt="Share">
             <div class="card-body">
               <h3 class="card-title fw-bold">Share</h3>
-                <p class="card-text">Share original photo and a story of YOUR dog and brighten someone’s day with his/her adorable antics!</p>
+                <p class="card-text">Share original photo and a story of YOUR dog and brighten someones day with his/her adorable antics!</p>
             </div>
           </div>
         </div>
