--- a/templates/base.html
+++ b/templates/base.html
@@ -30,46 +30,46 @@
 
     <!-- NAVIGATION -->
 
-    <nav class="navbar navbar-expand-lg light-bg navbar-light sticky-top">
+  <nav class="navbar navbar-expand-lg light-bg navbar-light sticky-top">
       <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/c_scale,h_300,w_900/v1691608017/Logo_m7ynhg.png"></a>
+          <a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/c_scale,h_300,w_900/v1691608017/Logo_m7ynhg.png" alt="Logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
               aria-controls="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
-  
           <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-5">
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'home' %}">Home</a>
-            </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'blog' %}">Blog</a>
-            </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'contact:contact' %}">Contact Us</a>
-            </li>
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'create_post' %}">Create Post</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'users:profile' %}">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-            </li>
-            {% endif %}
-          </ul>
-        </div>
-      </nav>
+            <ul class="navbar-nav mr-5">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'blog' %}">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'contact:contact' %}">Contact Us</a>
+              </li>
+              {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'create_post' %}">Create Post</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'users:profile' %}">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+              </li>
+              {% endif %}
+            </ul>
+          </div>
+      </div>
+  </nav>
       <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
@@ -92,7 +92,7 @@
     <!-- FOOTER -->
     <!-- Font awesome icons as the clickable links to social media sites. Links open in a new tab -->
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white "><i class="far fa-copyright"> Copyright | </i><img class="footer-logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691714704/baltas_buscjw.png"></p>
+        <p class="m-0 text-center text-white "><i class="far fa-copyright"> Copyright | </i><img class="footer-logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691714704/baltas_buscjw.png" alt="Logo"></p>
         <p class="m-0 text-center text-white social-networks">Follow us: 
             <a href="https://facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square ms-3"></i></a>
