Fix the html errors for the validation

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
       <div class="container-fluid">
           <a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/c_scale,h_300,w_900/v1691608017/Logo_m7ynhg.png" alt="Logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-              aria-controls="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
