--- a/templates/500.html
+++ b/templates/500.html
@@ -6,8 +6,8 @@
 <div class="container py-5">
     <div class="row justify-content-center">
         <div class="col-md-8 offset-md-2">
-            <h1 class="text-center">Oops! This page doesn't exists.</h1>
-            <p class="text-center">Sorry, you've encountered a 404 error. Please try again.</p>
+            <h1 class="text-center">500 Internal Server Error.</h1>
+            <p class="text-center">Don't worry, this is us not you!</p>
         </div>
     </div>
     <a href="{% url 'home' %}" class="btn btn-light">Home</a>
