Add the function to control the authorised actions

--- a/templates/403.html
+++ b/templates/403.html
@@ -6,8 +6,8 @@
 <div class="container py-5">
     <div class="row">
         <div class="col-md-8 offset-md-2 text-center">
-            <h1>500 Internal Server Error.</h1>
-            <p>Don't worry, this is us not you!</p>
+            <h1>403 Forbidden.</h1>
+            <p>You are not authorised to perform this action!</p>
             <a href="{% url 'home' %}" class="btn btn-light">Home</a>
         </div>
     </div>
